Correct header and Hero z-index

--- a/css/main.css
+++ b/css/main.css
@@ -127,8 +127,6 @@ a {
   list-style: none;
   padding: 0;
   text-align: center;
-  position: relative;
-  z-index: 40;
 }
 .social-list > li {
   display: inline-block;
